// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"  !!str &anchor \\n  # comment  \\n>\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:3 ~ 8:1)
1 | ··!!str·&anchor·¶
  |   ^^^^^^^^^^^^^^^
2 | ··#·comment··¶
  | ^^^^^^^^^^^^^^
3 | >¶
  | ^^
4 | ··123¶
  | ^^^^^^
5 | ··456¶
  | ^^^^^^
6 | ¶
  | ^
7 | ¶
  | ^
8 | ¶
  | ^
<blockFolded chomping="clip" indent=null value="123 456\\n">
  <tag value="tag:yaml.org,2002:str" />
  <anchor value="anchor" />
  <middleComment value=" comment  ">
</blockFolded>
`;

exports[`"  !!str &anchor \\n  # comment  \\n>\\n  123\\n  456\\n\\n\\n" 2`] = `
comment (2:3 ~ 2:14)
1 | ··!!str·&anchor·¶
2 | ··#·comment··¶
  |   ^^^^^^^^^^^
3 | >¶
4 | ··123¶
5 | ··456¶
6 | ¶
7 | ¶
8 | ¶
<comment value=" comment  " />
`;

exports[`"> # hello \\n  123\\n  456\\n\\n\\n" 1`] = `
root (1:1 ~ 6:1)
1 | >·#·hello·¶
  | ^^^^^^^^^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<root>
  <document>
    <documentHead>

    </documentHead>
    <documentBody>
      <blockFolded chomping="clip" indent=null value="123 456\\n">
        <indicatorComment value=" hello ">
      </blockFolded>
    </documentBody>
  </document>
</root>
`;

exports[`"> # hello\\n" 1`] = `
root (1:1 ~ 2:1)
1 | >·#·hello¶
  | ^^^^^^^^^^
2 | ¶
  | ^
<root>
  <document>
    <documentHead>

    </documentHead>
    <documentBody>
      <blockFolded chomping="clip" indent=null value="">
        <indicatorComment value=" hello">
      </blockFolded>
    </documentBody>
  </document>
</root>
`;

exports[`">+\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >+¶
  | ^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="keep" indent=null value="123 456\\n\\n\\n" />
`;

exports[`">\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >¶
  | ^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="clip" indent=null value="123 456\\n" />
`;

exports[`">-\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >-¶
  | ^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="strip" indent=null value="123 456" />
`;

exports[`">1+\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >1+¶
  | ^^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="keep" indent=1 value="  123\\n  456\\n\\n\\n" />
`;

exports[`">1\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >1¶
  | ^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="clip" indent=1 value="  123\\n  456\\n" />
`;

exports[`">1-\\n  123\\n  456\\n\\n\\n" 1`] = `
blockFolded (1:1 ~ 6:1)
1 | >1-¶
  | ^^^^
2 | ··123¶
  | ^^^^^^
3 | ··456¶
  | ^^^^^^
4 | ¶
  | ^
5 | ¶
  | ^
6 | ¶
  | ^
<blockFolded chomping="strip" indent=1 value="  123\\n  456" />
`;
